added rules and green tiles effect

--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
         <script language="javascript" type="text/javascript" src="sketch.js"></script>
         <style> body {padding: 0; margin: 0;} </style>
     </head>
-    <body></body>
+    <body>
+        <h1>Complexion</h1>
+        <div id="game"></div>
+        <h1>Rules</h1>
+        <ol>
+            <li>Red tiles are impassible, you cannot walk on them.</li>
+            <li>Yellow tiles are electric, they will electrocute you.</li>
+            <li>Orange tiles are orange scented, they will make you smell delicious.</li>
+            <li>Blue tiles are water, swim through them if you like, but the piranhas hate the smell of oranges.</li>
+            <li>If a blue tile is next to a yellow tile, the water will also zap you.</li>
+            <li>Purple tiles are slathered in slippery lemon-scented soap, a scent which the piranhas do not like.</li>
+            <li>Green tiles are chaos tiles, they will regenerate the puzzle.</li>
+            <li>Pink tiles don't do anything. Step on them all you like.</li>
+        </ol>
+    </body>
 </html>
