--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.17/p5.min.js"></script> 
-        <script language="javascript" type="text/javascript" src="sketch.js"></script>
+        <script language="javascript" type="text/javascript" src="scripts/sketch.js"></script>
         <style> body {padding: 0; margin: 0;} </style>
     </head>
     <body>
